# Machine-Learning---Zoomcamp

./: car_price_prediction.ipynb  churn_prediction.ipynb  credit_risk_scoring.ipynb  deep_learning.ipynb  intro_numpy.ipynb  intro_pandas.ipynb  pyproject.toml  usage_model.ipynb
.ipynb_checkpoints/: car_price_prediction-checkpoint.ipynb  churn_prediction-checkpoint.ipynb  credit_risk_scoring-checkpoint.ipynb  linear_algebra-checkpoint.ipynb
ml_zoomcamp/: hm3.ipynb  hw1.ipynb  hw2.ipynb  hw4.ipynb  hw8.ipynb
ml_zoomcamp/.ipynb_checkpoints/: hm3-checkpoint.ipynb  hw1-checkpoint.ipynb  hw2-checkpoint.ipynb  hw6-checkpoint.ipynb
